syntax = "proto3";

package auth;
//AuthService
service AuthService {
  //register
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  //login
  rpc Login (LoginRequest) returns (LoginResponse) {}
  //validate
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
  //refresh
  rpc Refresh (RefreshRequest) returns (LoginResponse) {}
  //logout
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  //social login (Google)
  rpc SocialLogin (SocialLoginRequest) returns (LoginResponse) {}
  //Send OTP
  rpc SendOtp (SendOtpRequest) returns (SendOtpResponse) {}
  //Verify OTP
  rpc VerifyOtp (VerifyOtpRequest) returns (LoginResponse) {}
}


message RegisterRequest {
  string email = 1;
  string password = 2; 
  string nickname = 3; 
  string avatar_url = 4;
}

message RegisterResponse {
  int32 status = 1;
  string error = 2;
  int32 user_id = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string error = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message ValidateRequest { string token = 1; }
message ValidateResponse { int32 status = 1; string error = 2; int32 user_id = 3; }

message RefreshRequest { string refresh_token = 1; }
message LogoutRequest { string refresh_token = 1; }
message LogoutResponse { bool success = 1; }

message SocialLoginRequest {
  string email = 1;
  string first_name = 2;
  string avatar_url = 3;
  string provider = 4;
  string provider_id = 5;
}

message SendOtpRequest {
  string identifier = 1;
}

message SendOtpResponse {
  bool success = 1;
  string message = 2;
}

message VerifyOtpRequest {
  string identifier = 1;
  string code = 2;
}